--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -29,7 +29,7 @@
   </div> -->
 
   <div class="container card-container">
-    <h1>Explore Recipes</h1>
+    <h1>Explore Rates</h1>
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <% for(var i=0; i<posts.length; i++) {%>
     <div class="col">
@@ -40,7 +40,7 @@
           <p class="card-text"><i class="px-1 bi bi-heart"></i><%= posts[i].likes.length - 1 %></p>
           <p class="card-text"><small class="text-muted">By: <%= userName[i]%></small></p>
           <p class="card-text"><%= posts[i].caption %></p>
-          <a href="/post/<%= posts[i]._id%>" class="btn btn-outline-primary">View Recipe</a>
+          <a href="/post/<%= posts[i]._id%>" class="btn btn-outline-primary">View Rate</a>
         </div>
         <div class="card-footer">
           <span class="badge bg-primary"><%= posts[i].country%></span>
