--- a/views/partials/logged-in-header.ejs
+++ b/views/partials/logged-in-header.ejs
@@ -36,9 +36,9 @@
               <a class="btn btn-dark btn-nav" href="/signup" role="button">Sign up</a> -->
               <span class="navbar-text">Hello, <%= user.userName %></span>
               <a class="nav-link active" aria-current="page" href="/feed">Explore</a>
-              <a class="nav-link" href="/my-recipes">My Recipes</a>
-              <a class="nav-link" href="/bookmarks">Favorite Recipes</a>
-              <a class="nav-link" href="/profile">Add Recipe</a>
+              <a class="nav-link" href="/my-recipes">My Estimates</a>
+              <a class="nav-link" href="/bookmarks">Saved Estimates</a>
+              <a class="nav-link" href="/profile">Add Estimate</a>
               <!-- <a class="btn btn-primary" href="/feed" role="button"><i class="bi bi-house-door-fill"></i></a> -->
               <!-- <a class="btn btn-primary" href="/profile" role="button"><i class="bi bi-person-fill"></i></a> -->
               <a href="/logout" class="btn btn-dark btn-nav" role="button">Logout</a>
