--- a/views/favorite-recipes.ejs
+++ b/views/favorite-recipes.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compound Interest Calculator</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
 </head>
 <body>
@@ -49,6 +49,6 @@
             <canvas id="data-set"></canvas>
         </div>
     </section>
-    <script src="appp.js"></script>
+    <script src="css/appp.js"></script>
 </body>
 </html>
