--- a/views/favorite-recipes.ejs
+++ b/views/favorite-recipes.ejs
@@ -13,6 +13,8 @@
         <div class="calculator">
             <div class="heading">
               <button> <a href="/feed" class="btn btn-outline-primary">Return to Feed</a> </button>
+              <button> <a href="/my-recipes" class="btn btn-outline-primary">Loan Calculator</a> </button>
+
 
                 <h3>Compound Interest Calculator</h3>
                 <small>Your money growth over time using compound interest...</small>
@@ -48,6 +50,78 @@
             <h3 id="message"></h3>
             <canvas id="data-set"></canvas>
         </div>
+        <div class="container card-container">
+            <div class="row justify-content-center">
+                <div class="col-6">
+                    <!-- <div>
+                        <p><strong>User Name</strong>: <%= user.userName %></p>
+                        <p><strong>Email</strong>: <%= user.email %></p>
+                        <!-- <a href="/logout" class="col-3 btn btn-primary">Logout</a> -->
+                    <!-- </div> --> 
+                    <div class="mt-5">
+                      <h2>Add a money estimate</h2>
+                      <form action="/post/createPost" enctype="multipart/form-data" method="POST">
+                        <div class="mb-3">
+                            <label for="title" class="form-label">Money Amount</label>
+                            <input type="text" class="form-control" id="title" name="title">
+                        </div>
+                        <div class="mb-3">
+                        <label for="country" class="form-label">What type of rate</label>
+                        <select class="form-select" aria-label="Default select example" id="country" name="country">
+                          <option selected>Select rate used</option>
+                          <option value="CP ">Compound Interest</option>
+                          <option value="LN ">Loan</option>
+                          <option value="TX ">Taxes</option>
+          
+          
+                        </select>
+                        </div>
+                        <div class="mb-3">
+                          <label for="basic-url" class="form-label">Loan Type</label>
+                          <select class="form-select" aria-label="Default select example" id="dish" name="dish">
+                            <option selected>Please Select</option>
+                            <option value="short">Short</option>
+                            <option value="med">Medium</option>
+                            <option value="long">Long</option>
+          
+                          </select>
+                          </div>
+                        <div class="mb-3">
+                          <label for="caption" class="form-label">Number of Payments</label>
+                          <textarea class="form-control" id="caption" name="caption" placeholder="Place each macro on its own line."></textarea>
+                        </div>
+                        <div class="mb-3">
+                          <label for="ingredients" class="form-label">Payment Timeline</label>
+                          <textarea class="form-control" id="ingredients" name="ingredients" placeholder="Place each month on its own line." rows="5"></textarea>
+                        </div>
+                        <div class="mb-3">
+                          <label for="directions" class="form-label">Directions</label>
+                          <textarea class="form-control" id="directions" name="directions" placeholder="Place each step on its own line." rows="5"></textarea>
+                        </div>
+                        <div class="mb-3">
+                          <label for="imgUpload" class="form-label">Image</label>
+                          <input type="file" class="form-control" id="imageUpload" name="file">
+                        </div>
+                        <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
+                      </form>
+                    </div>
+                </div>
+                <!-- <div class="col-6">
+                  <ul class="row list-unstyled">
+                  <% for(var i=0; i<posts.length; i++) {%>
+                    <li class="col-6 justify-content-between mt-5">
+                      <a href="/post/<%= posts[i]._id%>">
+                        <img class="img-fluid" src="<%= posts[i].image%>">
+                      </a>
+                    </li>
+                  <% } %>
+                  </ul>
+                  <div class="row justify-content-center mt-5">
+                    <a class="btn btn-primary" href="/feed">Return to Feed</a>
+                  </div>  
+                </div>   -->
+              </div>
+            </div>
     </section>
     <script src="css/appp.js"></script>
 </body>
