--- a/views/my-recipes.ejs
+++ b/views/my-recipes.ejs
@@ -187,7 +187,7 @@
                 </div>
               <div class="mb-3">
                 <label for="caption" class="form-label">Number of Payments</label>
-                <textarea class="form-control" id="caption" name="caption" placeholder="Place each macro on its own line."></textarea>
+                <textarea class="form-control" id="caption" name="caption" placeholder="Place each month on its own line."></textarea>
               </div>
               <div class="mb-3">
                 <label for="ingredients" class="form-label">Payment Timeline</label>
